<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="alex.exceed.FeedbackFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_feedback"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <RatingBar
          android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:layout_gravity="center|top"/>

    <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Value:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

    <CheckBox
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:layout_margin="10dp"
        />

    <CheckBox
        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifth"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="15"
        android:inputType="textPersonName"
        android:layout_margin="10dp"
        android:layout_weight="0.05"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_display" />
</LinearLayout>